# holodoc-discord-bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  fly.toml
.github/workflows/: rust.yml
db/: eatery.json  feedme.json  foods.json  wutplay.json
src/: main.rs
src/holodoc/: commands.rs  data.rs  structs.rs
src/holodoc/commands/: collection.rs  compiling.rs  cronreminder.rs  errors.rs  feedme.rs  help.rs  mod.rs  pick.rs  roll.rs  vinyl.rs  wutplay.rs
src/lib/: commands.rs  data.rs  mod.rs  structs.rs
src/lib/commands/: compiling.rs  cronreminder.rs  feedme.rs  mod.rs  wutplay.rs
