[package]
name = "holodoc"
version = "0.1.0"
authors = ["Micah Resnick <resnickmicah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

serenity = "0.10"
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
rand = "0.8.2"
lazy_static = "1.4.0"
