[package]
name = "holodoc"
version = "0.1.0"
authors = ["Micah Resnick <resnickmicah@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"

tokio = { version = "1", features = ["full"] }
rand = "0.8"
rand_core = "0.6" # cargo audit flagged rand_core 0.6.1
lazy_static = "1.4.0"
poise = "0.6.1"
shuttle-runtime = "0.46.0"
shuttle-serenity = "0.46.0"
anyhow = "1.0.86"
