[package]
name = "holodoc"
version = "0.1.0"
authors = ["Micah Resnick <resnickmicah@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.15" # cargo audit flagged crossbeam-channel 0.5.13
ring = "0.17.14" # cargo audit flagged ring 0.17.8
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
rand_core = "0.6" # cargo audit flagged rand_core 0.6.1
lazy_static = "1.4.0"
poise = "0.6.1"
shuttle-runtime = "0.55.0"
shuttle-serenity = "0.55.0"
anyhow = "1.0.86"
